# Bike-race-game

./: .gitignore  CMakeLists.txt  QUICKSTART.md  README.md  build.sh  install_and_run.sh  quick_build.sh
include/core/: CameraManager.h  GameEngine.h  InputManager.h
include/entities/: Bike.h  Player.h
include/level/: Checkpoint.h  Obstacle.h  Track.h
include/physics/: PhysicsEngine.h
include/systems/: AudioManager.h  LevelManager.h
include/ui/: UIManager.h
include/utils/: Config.h  Logger.h
src/: main.cpp
src/core/: CameraManager.cpp  GameEngine.cpp  InputManager.cpp
src/entities/: Bike.cpp  Player.cpp
src/level/: Checkpoint.cpp  Obstacle.cpp  Track.cpp
src/physics/: PhysicsEngine.cpp
src/systems/: AudioManager.cpp  LevelManager.cpp
src/ui/: UIManager.cpp
